# test1

./: .gitmodules  1.txt  CMakeLists.txt  Makefile  a.out  main.cpp  main.d  test.cmake  test.cpp
header/: test.h
subcmake1/: CMakeLists.txt
subcmake2/: CMakeLists.txt
submake/: Makefile
